Hide overflow for #side-bar, set fix height to 48em.

--- a/app/stylesheets/partials/_layout.sass
+++ b/app/stylesheets/partials/_layout.sass
@@ -64,4 +64,5 @@ body
 
 #side-bar
   +containers
-  min-height: 40em
+  min-height: 48em
+  height: 48em
