--- a/app/stylesheets/partials/_side_bar.sass
+++ b/app/stylesheets/partials/_side_bar.sass
@@ -63,6 +63,8 @@ $default-box-shadow-inset: true
 
 // SideBar
 #side-bar
+  overflow-y: hidden
+  overflow-x: hidden
   .word-text
     display: none
   .one-word
